<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_hike_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="watmok.tacoma.uw.edu.mylogin.HikeDetailActivity"
    tools:theme="@style/AppTheme"
    android:theme="@style/AppTheme">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TitleAppTheme"
        android:minHeight="?attr/actionBarSize"
        android:id="@+id/my_hd_toolbar"
        android:background="@color/Brick"
        tools:background="@color/Brick"
        app:subtitleTextAppearance="@color/Parchment"
        app:titleTextAppearance="@color/Parchment" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/hike_name"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/screen_background_dark"
                android:id="@+id/imageView" />

            <Switch
                android:text="@string/favorite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/saveHike"
                android:textColor="@color/Parchment" />


            <Button
                android:text="@string/view_trail_on_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/map_button"
                android:paddingBottom="5dp"
                android:background="@color/Brick"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:layout_weight="1.84"/>

            <Button
                android:text="@string/email_a_friend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email_button"
                android:background="@color/Brick" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/trail_length"
                android:textSize="18sp"
                android:layout_weight="0.71" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/elevation"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/elevation_gain"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/description"
                android:textSize="18sp" />

            <TextView
                android:text="@string/reviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/review_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/reviews" />

            <Button
                android:text="@string/post_a_review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/post_review_button"
                android:background="@color/Brick" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:hint="@string/enter_your_review_here"
                android:visibility="gone"
                android:id="@+id/review_box"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit_review"
                android:background="@color/Brick"
                android:id="@+id/submit_button"
                android:visibility="gone"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
