<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:theme="@style/TitleAppTheme"
    android:theme="@style/TitleAppTheme">
    <item
        android:id="@+id/back_item"
        android:title="Back"
        android:orderInCategory="100"
        app:showAsAction = "ifRoom">
    </item>
    <item
        android:id="@+id/logout_item"
        android:title="Logout"
        android:orderInCategory="90"
        app:showAsAction = "always">
    </item>
</menu>